style: sidebar align corrected

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -8,15 +8,25 @@
   box-sizing: border-box;
 }
 
+:root {
+  --bg-color: #f9fafb; /* gray-50 */
+}
+
+:root.dark {
+  --bg-color: #101214; /* dark-bg */
+}
+
 html,
 body,
 #root,
 .app {
-  height: 100%;
   width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: var(--bg-color);
+  overflow-x: hidden;
   @apply text-sm;
-  @apply bg-white;
-  @apply dark:bg-black;
 }
 
 /* TIMELINE STYLING */
